expandable - box fix bug with overflow text

--- a/src/components/expandable-box/expandable-box.css
+++ b/src/components/expandable-box/expandable-box.css
@@ -22,6 +22,8 @@
 	background: #f8f8f8;
 	box-shadow: 0 4px 4px #e5e6e6;
 	border-radius: 5px;
+	overflow: visible;
+	padding-bottom: 60px;
 }
 
 .expandable-box .accordion-title {
@@ -72,11 +74,10 @@
 	position: relative;
 	box-sizing: border-box;
 	padding-left: 22px;
-	padding-bottom: 10px;
 	text-align: left;
 	top: 50px;
 	font-size: 13px;
 	line-height: 1.6em;
-	height: 70px;
+	min-height: 30px;
 	width: auto;
 }
